--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=blogAPI
+spring.datasource.url=jdbc:postgresql://localhost:5432/blog
+spring.datasource.username=${dbUsername}
+spring.datasource.password=${dbPassword}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jackson.deserialization.fail-on-unknown-properties=true
+server.error.include-message=always
+spring.jpa.hibernate.ddl-auto=update
