--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jackson.deserialization.fail-on-unknown-properties=true
 server.error.include-message=always
 spring.jpa.hibernate.ddl-auto=update
+springdoc.override-with-generic-response=false
